--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,6 +10,21 @@
   min-height: 100vh;
 }
 
+.nav {
+  background: white;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
